// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`platform escapes names 1`] = `"name [what]"`;

exports[`platform initializes 1`] = `
Object {
  "endpoint": "https://api.bitbucket.org/",
  "gitAuthor": "user@domain.com",
  "hostRules": Array [
    Object {
      "hostName": "api.bitbucket.org",
      "hostType": "bitbucket",
      "password": "123",
      "username": "abc",
    },
  ],
  "platform": "bitbucket",
}
`;

exports[`platform initializes no author 1`] = `
Object {
  "endpoint": "https://api.bitbucket.org/",
  "hostRules": Array [
    Object {
      "hostName": "api.bitbucket.org",
      "hostType": "bitbucket",
      "password": "123",
      "username": "abc",
    },
  ],
  "platform": "bitbucket",
}
`;

exports[`platform parses bot email 1`] = `
Object {
  "address": "some[bot]@users.noreply.github.com",
  "name": "some[bot]",
}
`;

exports[`platform parses bot name and email 1`] = `
Object {
  "address": "some[bot]@users.noreply.github.com",
  "name": "some[bot]",
}
`;
